# USDX

./: .gitignore  ANDROID_THIRD_PARTY_LIBRARIES.md  COMPILING.md  Makefile.in  android_make_all.sh  android_make_all_windows.sh  autogen.sh  configure.ac  link71397.res  linkfiles.res
android_project/: README.md  build.gradle  local.properties  settings.gradle
android_project/app/: build.gradle
android_project/app/libs/arm64-v8a/pkginfo/: freetype.pc  gio-unix-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  hidapi.pc  liboboe.pc  libusb-1.0.pc  lua5.4.pc  portaudio-2.0.pc  vorbisenc.pc  vorbisfile.pc
android_project/app/libs/armeabi-v7a/lib/: sqlite3-dynamic  sqlite3-static
android_project/app/libs/armeabi-v7a/pkginfo/: fluidsynth.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  libffi.pc  libinstpatch-1.0.pc  liboboe.pc  libpcre.pc  libswscale.pc  libusb-1.0.pc  lua5.4.pc  oboe-1.0.pc  portaudio-2.0.pc
android_project/app/libs/include/sdl2/: SDL_config.h  SDL_revision.h
android_project/app/libs/licenses/: license_libpng.txt  license_libsqlite3.txt  license_lua5.4.6.txt
android_project/app/src/main/: AndroidManifest.xml
android_project/app/src/main/cpp/: CMakeLists.txt  gl_code.cpp  main.cpp  native-lib.cpp
android_project/app/src/main/cpp/android/app/src/main/assets/res/values/: strings.xml  themes.xml
android_project/app/src/main/cpp/glad/: glad.c  glad.h
android_project/app/src/main/cpp/libusdx/include/: usdx.h
android_project/gradle/wrapper/: gradle-wrapper.properties
dists/android/m4/: android_C_compiler.m4  android_ndk.m4  android_pkg.m4  ppcrossarm.m4
dists/autogen/m4/: fpc.m4  pkg_config_utils.m4
game/: LICENSE.portmidi.txt
game/languages/: English.ini
game/soundfonts/: copyright.txt
game/themes/: Deluxe.ini  Modern.ini
game/themes/Deluxe/: Blue.ini  Fall.ini  Ocean.ini  Ribbon.ini  Summer.ini  Winter.ini
game/themes/Modern/: Blue.ini  Winter.ini
installer/dependencies/pkgconfig/win64/: lua51.pc  portmidi.pc
src/: Makefile.in  config-android.inc  config-win.inc  config.inc.in  libmain.lps  libmain.pas  libusdx.lpi  libusdx.lps  libusdx.pas  pascal_test.pas  switches.inc  test.pas  ultrastardx-unix.lpi  ultrastardx.dpr
src/backup/: libusdx.lps  libusdx.pas  test.pas  ultrastardx-unix.lps
src/base/: TextGL.pas  UAvatars.pas  UBeatTimer.pas  UCatCovers.pas  UCommon.pas  UCommon_Android.pas  UConfig.pas  UCovers.pas  UDraw.pas  UDraw_original.pas  UEditorLyrics.pas  UFiles.pas  UFont.pas  UGraphic.pas  UGraphicClasses.pas  UHelp.pas  UImage.pas  UIni.pas  UJoystick.pas  ULanguage.pas  ULog.pas  ULyrics.pas  UMain.pas  UMainThread.pas  UMusic.pas  UMusic_original.pas  UNote.pas  UPath.pas  UPathUtils.pas  UPlatform.pas  UPlatformAndroid.pas  UPlaylist.pas  URecord.pas  URecord_original.pas  USingScores.pas  USkins.pas  USong.pas  USong_original.pas  USongs.pas  USongs_original.pas  (+6 more)
src/base/backup/: UIni.pas  UThemes.pas  UWebcam.pas
src/beatNote/: UBeatNote.pas  UBeatNoteTimer.pas  UExtraScore.pas  UKeyboardRecording.pas  UScreenOptionsBeatPlay.pas  UScreenOptionsBeatPlayPeakAnalysis.pas
src/jni/: UJniCallback.pas
src/lib/: lib-info.txt
src/lib/SDL2/: sdl2.pas  sdlvideo.inc
src/lib/SDL3/: sdl3.pas  sdl3_android.pas  sdl3_image.pas  sdlaudio.inc  sdlmutex.inc  sdlsurface.inc  sdlsyswm.inc  sdlvideo.inc
src/lib/SQLite/: SQLite3.pas  SQLiteTable3.pas
src/lib/amidi/: amidi.pas
src/lib/dglOpenGL/: dglOpenGL.pas  dglOpenGLES.pas
src/lib/dglOpenGL/backup/: dglOpenGL.pas
src/lib/ffmpeg-6.0/: avformat.pas
src/lib/fluidsynth/: UFluidSynth.pas  UFluidSynthAndroid.pas  pasfluidsynth.pas  pasfluidsynth_android.pas
src/lib/glad/: glad_gl.pas
src/lib/midi/: MidiFile.pas
src/lib/portmidi/: portmidi.pp
src/lib/x86_64-darwin/: libusdx.compiled
src/libmain/include/: test.h
src/libusdx/include/: usdx.h
src/lua/: ULuaGl.pas  ULuaUsdx.pas
src/lua/backup/: ULuaGl.pas
src/media/: UAudioConverter.pas  UAudioDecoder_FFmpeg.pas  UAudioPlaybackBase.pas  UAudioPlayback_SDL.pas  UAudioPlayback_SoftMixer.pas  UMediaCore_FFmpeg.pas  UVideo.pas
src/media/backup/: UAudioPlayback_SDL.pas  UAudioPlayback_SoftMixer.pas  UMediaCore_SDL.pas
src/menu/: UDisplay.pas  UDrawTexture.pas  UMenu.pas  UMenuBackground.pas  UMenuBackgroundColor.pas  UMenuBackgroundFade.pas  UMenuBackgroundNone.pas  UMenuBackgroundTexture.pas  UMenuBackgroundVideo.pas  UMenuButton.pas  UMenuEqualizer.pas  UMenuSelectSlide.pas  UMenuStatic.pas  UMenuStaticList.pas  UMenuText.pas  UMenu_original.pas
src/menu/backup/: UMenuBackgroundColor.pas  UMenuBackgroundFade.pas  UMenuBackgroundTexture.pas  UMenuBackgroundVideo.pas  UMenuStaticList.pas
src/midi_input/: UMidiInputStream.pas  UMidiNote.pas  UMidiPlayback.pas  UMidiTransfer.pas  UScreenOptionsMidiInput.pas  UScreenOptionsSoundfont.pas
src/midi_input/backup/: UMidiInputStream.pas  UMidiNote.pas  UScreenOptionsMidiInput.pas
src/screens/: UScreenAbout.pas  UScreenCredits.pas  UScreenEdit.pas  UScreenEditConvert.pas  UScreenEditSub.pas  UScreenJukebox.pas  UScreenJukeboxOptions.pas  UScreenJukeboxPlaylist.pas  UScreenLevel.pas  UScreenLoading.pas  UScreenMain.pas  UScreenName.pas  UScreenOpen.pas  UScreenOptions.pas  UScreenOptionsAdvanced.pas  UScreenOptionsGame.pas  UScreenOptionsGraphics.pas  UScreenOptionsInput.pas  UScreenOptionsJukebox.pas  UScreenOptionsLyrics.pas  UScreenOptionsNetwork.pas  UScreenOptionsRecord.pas  UScreenOptionsSound.pas  UScreenOptionsThemes.pas  UScreenOptionsWebcam.pas  UScreenPartyNewRound.pas  UScreenPartyOptions.pas  UScreenPartyPlayer.pas  UScreenPartyRounds.pas  UScreenPartyScore.pas  UScreenPartyTournamentOptions.pas  UScreenPartyTournamentPlayer.pas  UScreenPartyTournamentRounds.pas  UScreenPartyTournamentWin.pas  UScreenPartyWin.pas  UScreenPopup.pas  UScreenScore.pas  UScreenSong.pas  UScreenSongJumpto.pas  UScreenSongMenu.pas  (+3 more)
src/screens/backup/: UScreenCredits.pas
src/screens/controllers/: UScreenSingController.pas
src/screens/controllers/backup/: UScreenSingController.pas
src/screens/views/: UScreenSingView.pas
(+173 files in other folders)
